Dummy settings window added

--- a/app/timer/index.html
+++ b/app/timer/index.html
@@ -4,8 +4,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>Electron boilerplate</title>
-	<link rel="stylesheet" href="../assets/css/photon.min.css"> </head>
-	<link rel="stylesheet" href="main.css"> </head>
+	<link rel="stylesheet" href="../../assets/css/photon.min.css"> </head>
+	<link rel="stylesheet" href="index.css"> </head>
 
 <body>
 	<section class="overlay overlay--start" id="start">
@@ -25,6 +25,6 @@
 	</div>
 
 </body>
-<script src="main.js"></script>
+<script src="index.js"></script>
 
 </html>
